Render background images when the entire image has been loaded instead of incrementally. <IMG> elements are not affected, they will continue to be incrementally displayed as image data arrives. bug 85771 r=pavlov sr=attinasi a=roc+moz, tor