layout/base/nsImageLoader.cpp
@@ -140,25 +140,19 @@ NS_IMETHODIMP nsImageLoader::OnStartFrame(imgIRequest *aRequest, nsISupports *aC
 
 NS_IMETHODIMP nsImageLoader::OnDataAvailable(imgIRequest *aRequest, nsISupports *aContext, gfxIImageFrame *aFrame, const nsRect *aRect)
 {
-  if (!mFrame)
-    return NS_ERROR_FAILURE;
-
-  nsRect r(*aRect);
-
-  float p2t;
-  mPresContext->GetPixelsToTwips(&p2t);
-  r.x = NSIntPixelsToTwips(r.x, p2t);
-  r.y = NSIntPixelsToTwips(r.y, p2t);
-  r.width = NSIntPixelsToTwips(r.width, p2t);
-  r.height = NSIntPixelsToTwips(r.height, p2t);
-
-  RedrawDirtyFrame(&r);
-
+  // Background images are not displayed incrementally, they are displayed after the entire 
+  // image has been loaded.
+  // Note: Images referenced by the <img> element are displayed incrementally in nsImageFrame.cpp
   return NS_OK;
 }
 
 NS_IMETHODIMP nsImageLoader::OnStopFrame(imgIRequest *aRequest, nsISupports *aContext, gfxIImageFrame *aFrame)
 {
+  if (!mFrame)
+    return NS_ERROR_FAILURE;
+
+  // Draw the background image
+  RedrawDirtyFrame(nsnull);
   return NS_OK;
 }
 
